--- a/Object-Orentation/LibreriaOnlineJava/pom.xml
+++ b/Object-Orentation/LibreriaOnlineJava/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>ProgrammaJava</artifactId>
+    <artifactId>LibreriaOnlineJava</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>ProgrammaJava</name>
+    <name>LibreriaOnlineJava</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -60,7 +60,8 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.programmajava/com.example.programmajava.HelloApplication</mainClass>
+                            <mainClass>com.example.libreriaonlinejava/com.example.libreriaonlinejava.HelloApplication
+                            </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
